--- a/app/views/registrations/_details.html.erb
+++ b/app/views/registrations/_details.html.erb
@@ -6,44 +6,45 @@ Education Background
   <% q = @registration.qualification %>
     <li>
       <label>Qualification </label>: 
-        <%= best_in_place a,
+        <%= best_in_place_if (can? :update,a), a,
                           :qua_id,
                           type: :select,
-                          collection: Qualification.order(:name).map{|i| [i.id,i.name]}%>
+                          collection: Qualification.order(:name).map{|i| [i.id,i.name]},
+                          :display_as => "qualification_name"%>
     </li>
     
     <li>
       <label>Subject </label>: 
       
-        <%= best_in_place a, :qua_subject %>
+        <%= best_in_place_if (can? :update,a), a, :qua_subject %>
       
     </li>
     
     <li>
       <label>Institution </label>: 
       
-        <%= best_in_place a, :qua_institution %>
+        <%= best_in_place_if (can? :update,a), a, :qua_institution %>
       
     </li>
     
     <li>
       <label>Grade </label>: 
       
-        <%= best_in_place a, :qua_grade %>
+        <%= best_in_place_if (can? :update,a), a, :qua_grade %>
       
     </li>
     
     <li><label>
       Exam </label>: 
       
-        <%= best_in_place a, :qua_exam %>
+        <%= best_in_place_if (can? :update,a), a, :qua_exam %>
       
     </li>
     
     <li><label>
       Score </label>: 
       
-        <%= best_in_place a, :qua_score %>
+        <%= best_in_place_if (can? :update,a), a, :qua_score %>
       
     </li>
 </ul>
@@ -60,10 +61,11 @@ English Language Proficiency
     <li><label>
       Level of English </label>: 
       
-        <%= best_in_place a,
+        <%= best_in_place_if (can? :update,a), a,
                           :prof_eng_level_id,
                           type: :select,
-                          collection: EnglishLevel.order(:name).map{|i| [i.id,i.name]}%>
+                          collection: EnglishLevel.order(:name).map{|i| [i.id,i.name]},
+                          :display_as => "english_level_name"%>
       
     </li>
     
@@ -105,14 +107,14 @@ Emergency Contact
     <li><label>
       Full Name </label>: 
       
-        <%= best_in_place a, :emer_full_name %>
+        <%= best_in_place_if (can? :update,a), a, :emer_full_name %>
       
     </li>
     <li><label>
       Relationship </label>: 
 <% arr = %w(Father Mother Husband Wife Brother Sister Cousin Uncle Friend Other).map{|i| [i,i]} %>
 
-        <%= best_in_place a,
+        <%= best_in_place_if (can? :update,a), a,
                           :emer_relationship,
                           type: :select,
                           collection: arr %>
@@ -121,13 +123,13 @@ Emergency Contact
     <li><label>
       Mobile Number </label>: 
       
-        <%= best_in_place a, :emer_mobile %>
+        <%= best_in_place_if (can? :update,a), a, :emer_mobile %>
       
     </li>
     <li><label>
       Email </label>: 
       
-        <%= best_in_place a, :emer_email %>
+        <%= best_in_place_if (can? :update,a), a, :emer_email %>
       
     </li>
 </ul>
@@ -144,13 +146,13 @@ Flight Details
     <li><label>
       Flight Number </label>: 
       
-        <%= best_in_place a, :flight_no %>
+        <%= best_in_place_if (can? :update,a), a, :flight_no %>
       
     </li>
     <li><label>
       Arrival Date </label>: 
       
-        <%= best_in_place a, 
+        <%= best_in_place_if (can? :update,a), a, 
                           :flight_arrival_date,
                           :type => :date %>
       
@@ -158,13 +160,13 @@ Flight Details
     <li><label>
       Arrival Time </label>: 
       
-        <%= best_in_place a, :flight_arrival_time%>
+        <%= best_in_place_if (can? :update,a), a, :flight_arrival_time%>
       
     </li>
     <li><label>
       Airport </label>: 
       
-        <%= best_in_place a, :flight_airport %>
+        <%= best_in_place_if (can? :update,a), a, :flight_airport %>
       
     </li>
 </ul>
