--- a/app/views/user_configs/_form.html.erb
+++ b/app/views/user_configs/_form.html.erb
@@ -103,7 +103,7 @@
   </div>
   <br/>
   <h3>
-  Enquiry Columns <span class="a1" onclick="deselectAllCheck('#enq_cols');">deselect all </span>
+  Enquiry Columns <span class="btnp" onclick="deselectAllCheck('#enq_cols');">deselect all </span>
   </h3>
   <br/>
   <br/>
@@ -140,7 +140,7 @@
                    (enq_cols.map {|i| [i.titleize,i]}) )%>
   </div>
   <h3>
-  Registration Columns <span class="a1" onclick="deselectAllCheck('#reg_cols');">deselect all </span>
+  Registration Columns <span class="btnp" onclick="deselectAllCheck('#reg_cols');">deselect all </span>
   </h3>
   <br/>
   <br/>
