--- a/app/views/enquiries/_show.html.erb
+++ b/app/views/enquiries/_show.html.erb
@@ -15,10 +15,11 @@ $(function(){
                 <b>Contact type : 
                     <span class="sp">
                         <h6>
-                            <b><%= best_in_place a,
+                            <b><%= best_in_place_if (can? :update,a), a,
                                 :contact_type_id, 
                                 :type => :select, 
-                                :collection => ContactType.order(:name).map{|i| [i.id,i.name]} %> </b>
+                                :collection => ContactType.order(:name).map{|i| [i.id,i.name]},
+                                :display_as => "contact_type_name" %> </b>
                         </h6>
                     </span>
                 </b>
@@ -41,22 +42,24 @@ $(function(){
                         </b>
                         <% stat = disp1(a,"status") %>
                         <span class='<%= stat %>'>
-                          [<%= best_in_place a,
+                          [<%= best_in_place_if (can? :update,a), a,
                                 :status_id, 
                                 :type => :select, 
-                                :collection => EnquiryStatus.order(:name).map{|i| [i.id,i.name]} %>]
+                                :collection => EnquiryStatus.order(:name).map{|i| [i.id,i.name]},
+                                :display_as => "status_name" %>]
                         </span>
                         </h5>
                         <ul class="vlsdet">
-                        <li><label>Mobile 1 </label>: <%= best_in_place a, :mobile1 %></li>
-                        <li><label>Mobile 2 </label>: <%= best_in_place a, :mobile2 %></li>
-                        <li><label>Email 1</label>: <%= best_in_place a, :email1 %></li>
-                        <li><label>Email 2</label>: <%= best_in_place a, :email2 %></li>
+                        <li><label>Mobile 1 </label>: <%= best_in_place_if (can? :update,a), a, :mobile1 %></li>
+                        <li><label>Mobile 2 </label>: <%= best_in_place_if (can? :update,a), a, :mobile2 %></li>
+                        <li><label>Email 1</label>: <%= best_in_place_if (can? :update,a), a, :email1 %></li>
+                        <li><label>Email 2</label>: <%= best_in_place_if (can? :update,a), a, :email2 %></li>
                         <li><label>Country of Origin </label>: 
-                        <%= best_in_place a,
-                                :country_id, 
+                        <%= best_in_place_if (can? :update,a), a,
+                           :country_id, 
                            :type => :select, 
-                           :collection => Country.order(:name).map{|i| [i.id,i.name]} %>
+                           :collection => Country.order(:name).map{|i| [i.id,i.name]},
+                           :display_as => "country_of_origin_name" %>
                         </li>
                         </ul>
                     </div>
@@ -67,12 +70,12 @@ $(function(){
                     </h4>
                     <ul class="vlsdet">
                     <li><label>Date of Birth</label>: 
-                    <%= best_in_place a, :date_of_birth, :type => :date %>
+                    <%= best_in_place_if (can? :update,a), a, :date_of_birth, :type => :date %>
                     </li>
                     <li><label>Gender</label>: 
-                    <%= best_in_place a,:gender,type: :select,collection: [['m','male'],['f','female']] %></li>
+                    <%= best_in_place_if (can? :update,a), a,:gender,type: :select,collection: [['m','male'],['f','female']] %></li>
                     <li><label>Address</label>: 
-                    <%= best_in_place a,
+                    <%= best_in_place_if (can? :update,a), a,
                                       :address, 
                                       :type => :textarea %>
                     </li>
@@ -151,7 +154,7 @@ $(function(){
                             <%= (User.where(id: a.assigned_to).map &:first_name)[0] %>
                         </li>
                         <li><b>By :</b> 
-                            <%= (User.where(id: a.assigned_by).map &:first_name)[0] %>
+                            <%= a._assigned_by.first_name %>
                         </li> 
                     </ul>
                 </div>
