--- a/app/views/programmes/_note.html.erb
+++ b/app/views/programmes/_note.html.erb
@@ -2,6 +2,7 @@
           
            <div class="brg0"> </div>
            <br/>
+           <%= image_tag(note._created_by.image_url(:thumb),size: "40x40") %>
            <h6>
            <%= note.content %>
            </h6>
