--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -18,13 +18,10 @@ $(function(){
 <%= render 'users/menus' %>
 <div class="tab-content" style="display:block">
 <div class="boxp box-theme-ch">
-
-<br/>
-<br/>
-
-<h4 class="htab">
+<div class="htab">
+<h4>
         Organizor Roles
-        </h4>
+        </h4></div>
         <br/>
         <br/>
         <br/>
