--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -15,12 +15,11 @@ $(function(){
 <%= render 'users/menus' %>
 <div class="tab-content" style="display:block">
 <div class="boxp box-theme-ch">
-
-<br/>
-<br/>
-<h4 class="htab">
+<div class="htab">
+<h4>
   Invite Users To Organizor
 </h4>
+</div>
 <br/>
 <br/>
 
@@ -40,10 +39,8 @@ $(function(){
                     <input name="email[3]" type="text" placeholder="Email Address"/>
                 </div>
           </div>
-          </div><br/><br/>
-          
-          
-          <div class="cols">
+          </div>
+		  <div class="cols">
             <div class="col6">
                 <div class="frbox">
                     <label>Role</label>
