--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -14,13 +14,10 @@ $(function(){
 <%= render 'users/menus' %>
 <div class="tab-content" style="display:block">
 <div class="boxp box-theme-ch">
-
-<br/>
-<br/>
-
-<h4 class="htab">
+<div  class="htab">
+<h4>
         New Role
-        </h4>
+        </h4></div>
         <br/>
         <br/>
 
@@ -29,17 +26,17 @@ $(function(){
     <%= fs(role,[:desc,size: "10x3",style: 'width:400px;'],"text_area",nil,"Description") %>
     <br/>
     <br/>
-    <br/>
-    
-    <h4 class="htab">
+    <br/><br/>
+    <div  class="htab">
+    <h4>
         Manage Permissions
-    </h4>
+    </h4></div>
     <br/>
-    <br/>
-    <br/>
+
     <% perms = @permissions %>
     <table  class="tables3" border="0" cellpadding="0" cellspacing="0" width="100%">
-         <% r = perms.keys %>
+         
+		 <% r = perms.keys %>
          <% r.delete("All") %>
          <% r.each do |model| %>
         
