--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,17 +20,13 @@ $(function(){
 <%= render 'users/menus' %>
 <div class="tab-content" style="display:block">
 <div class="boxp box-theme-ch">
-<br/>
-<br/>
-        <h4 class="htab">
+<div class="class="htab"">
+        <h4 >
         Organizor Users
         </h4>
+		</div>
         <br/>
-        <br/>
-        <br/>
-
-
-        <table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
+<table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
                  <thead>
                   <tr>
                                         <th>First Name</th>
