--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@ $(function(){
 <% a = @user %>
 <% adm = current_user.adm? %>
 <div class="tab-content3" id="tab-content62">
-        <div class="boxp">
+        <div class="">
                <div class="htab">
                 <h5>
                     <b>Role : 
